# crawler_detection

./: README.md
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
devel/.private/crawler_gazebo/: .catkin  .rosinstall  setup.sh
devel/.private/detectron2ros/: .catkin  .rosinstall  setup.sh
devel/include/detectron2ros/: Result.h
devel/lib/crawler_gazebo/: keyboard_teleop.py
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  crawler_gazebo.pc  detectron2ros.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/crawler_gazebo/cmake/: crawler_gazeboConfig-version.cmake  crawler_gazeboConfig.cmake
devel/share/detectron2ros/cmake/: detectron2ros-msg-extras.cmake  detectron2ros-msg-paths.cmake  detectron2rosConfig-version.cmake  detectron2rosConfig.cmake
ros_deep_learning/launch/: detectnet.ros1.launch
src/: CMakeLists.txt  package.xml
src/crawler_gazebo/: CMakeLists.txt
src/crawler_gazebo/launch/: crawler_gazebo.launch  rviz.launch
src/crawler_gazebo/meshes/: link_1.STL  link_10.STL  link_11.STL  link_12.STL  link_13.STL  link_2.STL  link_3.STL  link_4.STL  link_7.STL  link_9.STL
src/crawler_gazebo/rviz/: rviz.rviz
src/crawler_gazebo/urdf/: crawler_gazebo.gazebo  crawler_gazebo.urdf
src/crawler_gazebo/worlds/: line.world  mytown.world
src/launch/: detectron2_ros.launch
src/src/: detectron2_ros  navigation_node  test.py
(+32 files in other folders)
